--- a/PythonApplication2/mainwindow.ui
+++ b/PythonApplication2/mainwindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>817</width>
-    <height>607</height>
+    <width>681</width>
+    <height>594</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -15,18 +15,8 @@
   </property>
   <widget class="QWidget" name="centralwidget">
    <layout class="QGridLayout" name="gridLayout">
-    <item row="16" column="1">
-     <widget class="QPushButton" name="FFTButton">
-      <property name="text">
-       <string>Toggle Fast Fourier Transform (FFT)</string>
-      </property>
-      <property name="checkable">
-       <bool>true</bool>
-      </property>
-      <property name="checked">
-       <bool>false</bool>
-      </property>
-     </widget>
+    <item row="1" column="1" rowspan="2" colspan="2">
+     <widget class="PlotWidget" name="graphWidget" native="true"/>
     </item>
     <item row="1" column="0" rowspan="2">
      <widget class="QScrollBar" name="verticalScrollBar">
@@ -38,58 +28,117 @@
       </property>
      </widget>
     </item>
-    <item row="2" column="1" colspan="2">
-     <widget class="PlotWidget" name="graphWidget" native="true"/>
-    </item>
-    <item row="14" column="1">
-     <widget class="QPushButton" name="playButton">
-      <property name="text">
-       <string>Pause/Play</string>
-      </property>
-      <property name="checkable">
-       <bool>true</bool>
-      </property>
-     </widget>
-    </item>
-    <item row="4" column="0" colspan="3">
+    <item row="4" column="1" colspan="2">
      <widget class="QScrollBar" name="horizontalScrollBar">
       <property name="orientation">
        <enum>Qt::Horizontal</enum>
       </property>
      </widget>
     </item>
-    <item row="16" column="2">
-     <widget class="QPushButton" name="zoomoutButton">
-      <property name="text">
-       <string>Zoom Out</string>
-      </property>
-     </widget>
+    <item row="6" column="2">
+     <layout class="QGridLayout" name="gridLayout_3">
+      <item row="1" column="1">
+       <widget class="QPushButton" name="zoominButton">
+        <property name="enabled">
+         <bool>true</bool>
+        </property>
+        <property name="text">
+         <string>Zoom In</string>
+        </property>
+        <property name="autoDefault">
+         <bool>false</bool>
+        </property>
+        <property name="default">
+         <bool>false</bool>
+        </property>
+        <property name="flat">
+         <bool>false</bool>
+        </property>
+       </widget>
+      </item>
+      <item row="2" column="1">
+       <widget class="QPushButton" name="zoomoutButton">
+        <property name="text">
+         <string>Zoom Out</string>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="0">
+       <widget class="QPushButton" name="playButton">
+        <property name="text">
+         <string>Pause/Play</string>
+        </property>
+        <property name="checkable">
+         <bool>true</bool>
+        </property>
+       </widget>
+      </item>
+      <item row="0" column="0" colspan="2">
+       <widget class="QPushButton" name="browseButton">
+        <property name="text">
+         <string>Browse</string>
+        </property>
+       </widget>
+      </item>
+      <item row="2" column="0">
+       <widget class="QPushButton" name="FFTButton">
+        <property name="text">
+         <string>Toggle Fast Fourier Transform (FFT)</string>
+        </property>
+        <property name="checkable">
+         <bool>true</bool>
+        </property>
+        <property name="checked">
+         <bool>false</bool>
+        </property>
+       </widget>
+      </item>
+     </layout>
     </item>
-    <item row="14" column="2">
-     <widget class="QPushButton" name="zoominButton">
-      <property name="enabled">
-       <bool>true</bool>
-      </property>
-      <property name="text">
-       <string>Zoom In</string>
-      </property>
-      <property name="autoDefault">
-       <bool>false</bool>
-      </property>
-      <property name="default">
-       <bool>false</bool>
-      </property>
-      <property name="flat">
-       <bool>false</bool>
-      </property>
-     </widget>
-    </item>
-    <item row="5" column="1" colspan="2">
-     <widget class="QPushButton" name="browseButton">
-      <property name="text">
-       <string>Browse</string>
-      </property>
-     </widget>
+    <item row="6" column="1">
+     <layout class="QGridLayout" name="gridLayout_4">
+      <item row="1" column="0">
+       <widget class="QComboBox" name="comboBox">
+        <item>
+         <property name="text">
+          <string>Choose a Filter to Apply</string>
+         </property>
+        </item>
+        <item>
+         <property name="text">
+          <string>No Filter</string>
+         </property>
+        </item>
+        <item>
+         <property name="text">
+          <string>Smoothing Filter</string>
+         </property>
+        </item>
+        <item>
+         <property name="text">
+          <string>Low Pass Filter</string>
+         </property>
+        </item>
+        <item>
+         <property name="text">
+          <string>High Pass Filter</string>
+         </property>
+        </item>
+        <item>
+         <property name="text">
+          <string>Band Pass Filter</string>
+         </property>
+        </item>
+       </widget>
+      </item>
+      <item row="2" column="0">
+       <widget class="QPushButton" name="pushButton">
+        <property name="text">
+         <string>Apply Filter</string>
+        </property>
+       </widget>
+      </item>
+     </layout>
     </item>
    </layout>
   </widget>
@@ -98,7 +147,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>817</width>
+     <width>681</width>
      <height>21</height>
     </rect>
    </property>
