--- a/PythonApplication2/mainwindow.ui
+++ b/PythonApplication2/mainwindow.ui
@@ -15,8 +15,12 @@
   </property>
   <widget class="QWidget" name="centralwidget">
    <layout class="QGridLayout" name="gridLayout">
-    <item row="1" column="1" rowspan="2" colspan="2">
-     <widget class="PlotWidget" name="graphWidget" native="true"/>
+    <item row="4" column="1" colspan="2">
+     <widget class="QScrollBar" name="horizontalScrollBar">
+      <property name="orientation">
+       <enum>Qt::Horizontal</enum>
+      </property>
+     </widget>
     </item>
     <item row="1" column="0" rowspan="2">
      <widget class="QScrollBar" name="verticalScrollBar">
@@ -28,16 +32,19 @@
       </property>
      </widget>
     </item>
-    <item row="4" column="1" colspan="2">
-     <widget class="QScrollBar" name="horizontalScrollBar">
-      <property name="orientation">
-       <enum>Qt::Horizontal</enum>
-      </property>
-     </widget>
+    <item row="1" column="1" rowspan="2" colspan="2">
+     <widget class="PlotWidget" name="graphWidget" native="true"/>
     </item>
-    <item row="6" column="2">
+    <item row="5" column="1" colspan="2">
      <layout class="QGridLayout" name="gridLayout_3">
-      <item row="1" column="1">
+      <item row="2" column="2">
+       <widget class="QPushButton" name="zoomoutButton">
+        <property name="text">
+         <string>Zoom Out</string>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="2">
        <widget class="QPushButton" name="zoominButton">
         <property name="enabled">
          <bool>true</bool>
@@ -56,14 +63,14 @@
         </property>
        </widget>
       </item>
-      <item row="2" column="1">
-       <widget class="QPushButton" name="zoomoutButton">
+      <item row="0" column="1" colspan="2">
+       <widget class="QPushButton" name="browseButton">
         <property name="text">
-         <string>Zoom Out</string>
+         <string>Browse</string>
         </property>
        </widget>
       </item>
-      <item row="1" column="0">
+      <item row="1" column="1">
        <widget class="QPushButton" name="playButton">
         <property name="text">
          <string>Pause/Play</string>
@@ -73,14 +80,14 @@
         </property>
        </widget>
       </item>
-      <item row="0" column="0" colspan="2">
-       <widget class="QPushButton" name="browseButton">
+      <item row="2" column="0">
+       <widget class="QPushButton" name="filterButton">
         <property name="text">
-         <string>Browse</string>
+         <string>Apply Filter</string>
         </property>
        </widget>
       </item>
-      <item row="2" column="0">
+      <item row="2" column="1">
        <widget class="QPushButton" name="FFTButton">
         <property name="text">
          <string>Toggle Fast Fourier Transform (FFT)</string>
@@ -93,10 +100,6 @@
         </property>
        </widget>
       </item>
-     </layout>
-    </item>
-    <item row="6" column="1">
-     <layout class="QGridLayout" name="gridLayout_4">
       <item row="1" column="0">
        <widget class="QComboBox" name="comboBox">
         <item>
@@ -129,13 +132,6 @@
           <string>Band Pass Filter</string>
          </property>
         </item>
-       </widget>
-      </item>
-      <item row="2" column="0">
-       <widget class="QPushButton" name="pushButton">
-        <property name="text">
-         <string>Apply Filter</string>
-        </property>
        </widget>
       </item>
      </layout>
